--- a/network_modeling/chapter_PP.tex
+++ b/network_modeling/chapter_PP.tex
@@ -132,8 +132,8 @@ Defining
 	\end{equation}
 \end{theorem}
 
-\begin{theorem}[5.7, Joint probability of [$W_{1}$,..$W_{n}$]]
-	Being $W_{1}$,$W_{2}$,..$W_{n}$ the arrival time in a Poisson Process $N(t)$ with rate ${\lambda}>0$. Given $N(t)=n$, the joint distribution of $w_{1}$,$w_{2}$,..$w_{n}$ variables is:
+\begin{theorem}[5.7, Joint probability of {$[W_{1},\dots,W_{n}]$}]
+	Being $W_{1}$,$W_{2}$,..$W_{n}$ the arrival time in a Poisson Process $N(t)$ with rate ${\lambda}>0$. Given $N(t)=n$, the joint distribution of $w_{1},w_{2}\dots,w_{n}$ variables is:
 	\begin{equation}
 	f_{W_1,W_2,..W_n|n} (w_1,w_2,..w_n) = P (W_1=w_1,...W_n=w_n|N(t)=n) = n!/t^n
 	\end{equation}
@@ -211,6 +211,13 @@ Defining
 	It is a direct consequence of Theorem 5.7.
 	Being $X(t)=n$, the position of each arrival along interval $t$ can be modeled as i.i.d. uniform random variable. This corresponds to the realization of n experiments with $p_{succ}=u/t$ thus the conditioned probability can be modeled as binomial $Bin(n,\frac{u}{t})$.
 \end{proof}
+
+We will now show the theorem for the case where we have $X_1(t)\tilde\P(\lambda_1)$ and $X_2(t)\tilde\P(\lambda_2)$
+\begin{esp}
+	\prob[X_1(t)=k |X_1(t)+X_2(t)=n] &= \frac{\prob[X_1(t)=k |X_1(t)=k,X_2(t)=n-k]}{\prob[X_1(t)+X_2(t)=n]}\\
+	&= \frac{e^{-\lambda_1 \cdot t}\cdot \frac{(\lambda_1 t)^k}{k!}\cdot e^{-\lambda_2 \cdot t}\cdot \frac{(\lambda_2 t)^{n-k}}{(n-k)!}}{e^{-(\lambda_1 +\lambda_2) \cdot t}\cdot \frac{\left[(\lambda_1 +\lambda_2) t\right]^{n}}{n!}} \\
+	&= \frac{n!}{(n-k)| \cdot k!} \cdot \left(\frac{\lambda_1}{\lambda_1+\lambda_2}\right)^{k}\cdot \left(\frac{\lambda_2}{\lambda_1+\lambda_2}\right)^{n-k}
+\end{esp}
 
 \section{M/G/$\infty$}
 
