--- a/network_modeling/network_modeling.tex
+++ b/network_modeling/network_modeling.tex
@@ -147,7 +147,7 @@
 \newcommand{\Fig}[1]{Fig.~\ref{#1}}
 \newcommand{\eq}[1]{(\ref{#1})}
 \newcommand{\Tab}[1]{Tab.~\ref{#1}}
-\newcommand{\Sec}[1]{Sec.~\ref{#1}}
+\newcommand{\Sec}[1]{[Sec.~\ref{#1}]}
 \newcommand{\indep}{\mathrel{\perp\mspace{-10mu}\perp}}
 \newcommand{\RN}[1]{ \textup{\uppercase\expandafter{\romannumeral#1}}} %This is for inserting Roman Numbers (useful for \stackrel in equations so that you don't confuse indicating numbers from equation numbers
 
